[tool.poetry]
name = "light"
version = "0.1.0"
description = ""
authors = ["Jijun Leng"]
readme = "README.md"

[tool.codespell]
check-filenames = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
ruamel-yaml = "^0.18.5"
pulumi = "^3.96.2"
pulumi-aws = "^6.13.3"
typer = "^0.9.0"
pulumi-eks = "^2.0.0"
pulumi-awsx = "^2.3.0"
pulumi-kubernetes = "^4.6.1"
pathspec = "^0.12.1"
requests = "^2.31.0"
kubernetes = "^v29.0.0b1"

[tool.poetry.group.dev.dependencies]
codespell = "^2.2.6"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
pytest-snapshot = "^0.9.0"
types-requests = "^2.31.0.20231231"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
