[tool.poetry]
name = "paka"
version = "0.1.1"
description = "LLMOps tool designed to simplify the deployment and management of large language model (LLM) applications"
authors = ["Jijun Leng"]
readme = "README.md"

[tool.codespell]
check-filenames = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:pkg_resources is deprecated:DeprecationWarning",
  "ignore:Waiting for.*:DeprecationWarning",
]

[tool.poetry.scripts]
paka = "paka.cli.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
ruamel-yaml = "^0.18.5"
pulumi = "^3.96.2"
pulumi-aws = "^6.13.3"
typer = "^0.9.0"
pulumi-eks = "^2.0.0"
pulumi-awsx = "^2.3.0"
pulumi-kubernetes = "^4.6.1"
pathspec = "^0.12.1"
requests = "^2.31.0"
kubernetes = "^v29.0.0b1"
boto3 = "^1.34.22"
tabulate = "^0.9.0"
huggingface-hub = "^0.22.2"

[tool.poetry.group.dev.dependencies]
codespell = "^2.2.6"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
pytest-snapshot = "^0.9.0"
types-requests = "^2.31.0.20231231"
isort = "^5.13.2"
types-tabulate = "^0.9.0.20240106"
pulumi-policy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
