[tool.poetry]
name = "paka"
version = "0.1.8"
description = "LLMOps tool designed to simplify the deployment and management of large language model (LLM) applications"
homepage = "https://github.com/jjleng/paka"
keywords = ["LLMOps", "RAG", "production", "Cloud"]
authors = ["Jijun Leng"]
readme = "README.md"

[tool.codespell]
check-filenames = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = "pydantic.mypy"
warn_unused_configs = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.poetry.scripts]
paka = "paka.cli.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.7.0"
ruamel-yaml = "^0.18.6"
pulumi = "3.105.0"
pulumi-aws = "^6.31.0"
typer = "^0.12.3"
pulumi-eks = "^2.3.0"
pulumi-awsx = "^2.7.0"
pulumi-kubernetes = "^4.8.1"
pathspec = "^0.12.1"
requests = "^2.31.0"
kubernetes = "^29.0.0"
boto3 = "^1.34.86"
tabulate = "^0.9.0"
huggingface-hub = "^0.22.2"
tqdm = "^4.66.2"
typing-extensions = "^4.11.0"
fasteners = "^0.19"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
codespell = "^2.2.6"
mypy = "^1.9.0"
pre-commit = "3.5.0"
pytest = "^8.1.1"
pytest-snapshot = "^0.9.0"
types-requests = "2.31.0.6"
isort = "^5.13.2"
types-tabulate = "^0.9.0.20240106"
pulumi-policy = "^1.11.0"
moto = "^5.0.5"
boto3-stubs = { extras = ["ec2", "ecr", "s3"], version = "^1.34.106" }
types-tqdm = "^4.66.0.20240417"
pytest-order = "^1.2.1"
kubernetes-stubs-elephant-fork = "^29.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
